--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
 <head>
-  <title>yoogx.github.com>/title>
+  <title>yoogx.github.com</title>
 
   <meta http-equiv="Content-Type"
  content="text/html; charset=iso-8859-1">
